11/08/2009 : Created changelog :)